--- a/src/container/footer/footer.css
+++ b/src/container/footer/footer.css
@@ -57,7 +57,8 @@ footer{
 
 .copyright{
   color: #fff;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
+  /* padding: 0 0 0 24px; */
 }
 
 @media screen and (max-width: 660px) {
