--- a/src/container/testimonials/testimonials.css
+++ b/src/container/testimonials/testimonials.css
@@ -68,8 +68,8 @@
 
 .testimonials__arrow .arrow1,
 .testimonials__arrow .arrow2{
-  height: 23px;
-  width: 33px;
+  height: 2rem;
+  width: 3rem;
   border: 1px solid var(--color-main);
   text-align: center;
   border-radius: 20px;
